tests/whiley/valid/test_1398.wyal
define f_ensures_0(int x, int r) is:
    (r >= 0) && (r <= 2)


assert "postcondition not satisfied":
    forall(int x):
        if:
            x == 1
        then:
            f_ensures_0(x, 0)


